# halley-launcher

./: .gitignore  CMakeLists.txt  source_list.txt
assets_src/binary/: halley-launcher.pub
assets_src/config/ui_style/: launcher_style.yaml
assets_src/material/: background.material
assets_src/ui/launcher/: add_project.ui  launch_project.ui  load_project.ui  load_project.yaml  project_entry.ui  update.ui  update.yaml
deploy/: halley-launcher.yaml
halley_project/: asset_manifest.yaml  properties.yaml
scripts/: build_target_editor.bat  cmake_vs2019_64.bat  cmake_vs2019_64_with_tools.bat  make_dist.bat  update.bat
src/: add_project.cpp  add_project.h  choose_project.cpp  choose_project.h  launch_project.cpp  launch_project.h  launcher.cpp  launcher.h  launcher_project_properties.cpp  launcher_project_properties.h  launcher_settings.cpp  launcher_settings.h  launcher_stage.cpp  launcher_stage.h  new_version_info.cpp  new_version_info.h  project_properties.cpp  project_properties.h  settings.cpp  settings.h  update.cpp  update.h  web_client.cpp  web_client.h
tmp/scripts/: update.bat
